--- a/instructions.html
+++ b/instructions.html
@@ -115,7 +115,7 @@
 
     <p><strong>Important:</strong> Always keep backups of your original save files before editing, just in case!</p>
 
-    <a href="trombonechampsaveeditor.html" class="button-link">Go to Save Editor</a>
+    <a href="trombone-editor.html" class="button-link">Go to Save Editor</a>
   </main>
 </body>
 </html>
