--- a/index.html
+++ b/index.html
@@ -1,33 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hydra Projects</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding-top: 100px;
-      background-color: #f4f4f4;
-    }
-    h1 {
-      font-size: 3em;
-    }
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      font-size: 1.5em;
-      text-decoration: none;
-      color: #007bff;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Hydra Projects Main</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #f5f7fa;
+    margin: 0; padding: 0;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  header {
+    background-color: #4a90e2;
+    padding: 1.5rem 1rem;
+    color: white;
+    text-align: center;
+    font-weight: 700;
+    font-size: 2rem;
+    letter-spacing: 1.5px;
+  }
+  main {
+    flex-grow: 1;
+    max-width: 600px;
+    margin: 2rem auto;
+    background: white;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 6px 15px rgb(0 0 0 / 0.1);
+    text-align: center;
+  }
+  h2 {
+    margin-top: 0;
+    color: #4a90e2;
+    font-weight: 600;
+  }
+  a {
+    display: block;
+    margin: 1rem 0;
+    color: #4a90e2;
+    font-size: 1.1rem;
+    text-decoration: none;
+    font-weight: 600;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+</style>
 </head>
 <body>
-  <h1>Hydra Projects</h1>
-  <p><a href="trombone-editor.html">Trombone Champ Save Editor</a></p>
+  <header>Hydra Projects</header>
+  <main>
+    <h2>Welcome to Hydra Projects</h2>
+    <a href="trombone-editor.html">Trombone Champ Save Editor</a>
+    <a href="other-tool.html">Other Tool</a>
+    <a href="instructions.html">Instructions</a>
+  </main>
 </body>
 </html>
